@@ -1,3 +1,13 @@
+2011-09-06  Alexey Proskuryakov  <ap@apple.com>
+
+        Layout Test fast/dom/HTMLMeterElement/meter-element-crash.html is flaky
+        https://bugs.webkit.org/show_bug.cgi?id=67653
+
+        Reviewed by James Robinson.
+
+        * fast/dom/HTMLMeterElement/meter-element-crash.html: Added waitUntilDone/notifyDone,
+        and changed "1" that's displayed after testing to "PASS".
+
 2011-09-06  Ben Wells  <benwells@chromium.org>
 
         Rebaseline for bug 65583 (path based border radius drawing on skia)
